--- a/Resources/DesktopModules/DDRMenu/App_LocalResources/MenuSettings.ascx.nl-NL.resx
+++ b/Resources/DesktopModules/DDRMenu/App_LocalResources/MenuSettings.ascx.nl-NL.resx
@@ -19,6 +19,6 @@
     <value xml:space="preserve">Menu-instellingen</value>
   </data>
   <data name="ModuleHelp.Text" lastModified="2020-05-16 16:11:44">
-    <value xml:space="preserve">De DDRMenu documentatie is beschikbaar op de &lt;a href="https://https://dnncommunity.org/documentation"&gt;DNN Docs&lt;/a&gt;.</value>
+    <value xml:space="preserve">De DDRMenu documentatie is beschikbaar op de &lt;a href="https://dnncommunity.org/documentation"&gt;DNN Docs&lt;/a&gt;.</value>
   </data>
 </root>
